css/theme.css
/* ... */
/* Button styles */
button {
  display: inline-block;
  box-sizing: border-box;
  padding: 0.75rem 1.5rem;
  border: none;
  border-radius: 0.25rem;
  font-family: var(--font-body);
  font-size: 1.125rem;
  font-weight: 500;
  cursor: pointer;
  background-color: var(--color-contrast);
  color: var(--color-bg-light);
}

.btn--primary,
.btn--secondary {
  display: inline-block;
  padding: 0.75rem 1.5rem;
  border-radius: 0.25rem;
  font-family: var(--font-body);
  font-size: 1.125rem;
  font-weight: 500;
  text-decoration: none;
  width: fit-content;
  cursor: pointer;
  box-sizing: border-box;
}

.btn--primary {
  background-color: var(--color-primary);
  color: var(--color-primary-btn-text);
  transition:
    background-color 0.3s ease-in-out,
    color 0.3s ease-in-out;
}

.btn--secondary,
.wp-block-button__link,
.comment-form input[type="submit"],
.forminator-ui .forminator-button {
  background-color: var(--color-contrast);
  color: var(--color-bg-light);
  text-decoration: none;
  width: fit-content;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.125rem;
  font-weight: 500;
  transition:
    background-color 0.3s ease-in-out,
    color 0.3s ease-in-out;
}

.btn--secondary:hover,
.wp-block-button__link:hover,
.comment-form input[type="submit"]:hover,
.forminator-ui .forminator-button:hover {
  background-color: var(--color-footer);
  color: var(--color-text);
}

.btn--secondary:focus-visible,
.wp-block-button__link:focus-visible,
.comment-form input[type="submit"]:focus-visible,
.forminator-ui .forminator-button:focus-visible {
  outline: 2px solid var(--color-text);
  outline-offset: 2px;
}

.btn--icon-large {
  all: unset;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  padding: 0.5rem 0.75rem;
  color: var(--color-text);
  cursor: pointer;

  &:hover {
    background-color: var(--color-menu-button-hover);
    color: var(--color-text);
  }
}

.btn--footer {
  border: 2px solid var(--color-contrast);
  white-space: nowrap;

  &:hover {
    border: 2px solid var(--color-text);
    transition:
      background-color 0.3s ease-in-out,
      color 0.3s ease-in-out;
  }

  &:focus-visible {
    outline: 2px solid var(--color-text);
    border-radius: 0.25rem;
  }
}

.btn--icon-large:focus-visible {
  color: var(--color-background);
  background-color: var(--color-text);
}

.btn--icon-large:focus-visible svg {
  stroke: var(--color-background);
}

.btn--icon-large[aria-current="page"],
.btn--icon-large[aria-pressed="true"] {
  background-color: var(--color-contrast);
  color: var(--color-bg-light);
  font-weight: 700;
}

.btn--icon-large[aria-pressed="true"] svg {
  stroke: var(--color-bg-light);
}

.btn--icon-large[aria-current="page"] {
  pointer-events: none;
}

a.btn--icon-large {
  color: var(--color-text);
}

.btn--icon-small {
  all: unset;
  padding: 0.5em;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;

  &:hover {
    background-color: var(--color-menu-button-hover);
  }
}

.btn--icon-small:focus-visible {
  background-color: var(--color-text);
  color: var(--color-background);
  border-radius: 50%;
  outline: 2px solid var(--color-text);
  outline-offset: 2px;
}

.btn--icon-small:focus-visible svg {
  stroke: var(--color-background);
}

#close-accessibility,
#close-search {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.button-wrapper {
  display: flex;
  justify-content: center;
  margin-top: 2rem;
}

/* Style effects */

.hover-shadow-pink:hover {
  box-shadow: 0.5rem 0.5rem 0 0 var(--color-accent);
}

.hover-shadow-blue:hover {
  box-shadow: 0.5rem 0.5rem 0 0 var(--color-contrast);
}

.dotted-background-pink {
  background-image: radial-gradient(var(--color-accent) 2px, transparent 2px);
  background-size: 20px 20px;
}

.dotted-background-blue {
  background-image: radial-gradient(var(--color-contrast) 2px, transparent 2px);
  background-size: 20px 20px;
}

/* Pagination */

/* Single pagination */

.pagination {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2rem;
  margin-bottom: 2rem;
  background-color: var(--color-background);
}

.post-nav {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 2rem;
  background-color: var(--color-background);
}

.post-nav .post-nav__prev,
.post-nav .post-nav__next {
  flex: 1;
}

.post-nav .chevron {
  font-size: 1.5rem;
  line-height: 1;
}

.post-nav__prev {
  text-align: left;
}

.post-nav__next {
  text-align: right;
}

.pagination ul {
  list-style: none;
  display: flex;
  gap: 0.5rem;
  padding: 0;
}

.pagination li {
  display: inline-flex;
}

/* Forms */

.form,
.forminator-ui {
  display: flex;
  gap: 1rem;
  width: 100%;
  flex-direction: column;
}

.comment-form {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 1rem;
  max-width: 40rem;
}

.form label,
.comment-form label,
.search-label,
.forminator-label,
#forminator-field-consent-1_68b6d1726b718-label.forminator-label,
.forminator-required {
  font-family: var(--font-body);
  font-size: var(--font-size-regular);
  font-weight: bold;
  color: var(--color-text) !important;
}

.form__group {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  margin-bottom: 0;
  width: 100%;
}

.search-input:focus {
  outline: 1px solid var(--color-text);
  border-radius: 0.25rem;
}

.form__group--row {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  margin-bottom: 0;
}

.form__group.url-field {
  margin-bottom: 0.5rem;
}

.form__group:last-child {
  margin-bottom: 0;
}

.form__submit {
  margin: 0.5rem 0;
}
/* ... */

